--- a/cssintro/styles/styles.css
+++ b/cssintro/styles/styles.css
@@ -1,39 +1,56 @@
-body {
-    text-align: center;
+* {
+    border: 2px solid blue;
 }
 
-nav {
+
+
+nav, footer {
     background-color: steelblue;
     padding: 10px;
+    color: white;
 }
 
 a {
     color: white;
     margin: 40px;
+    font-size: 1.5em;
+}
+a:hover {
+    background-color: white;
+    color: steelblue;
 }
 
 h1 {
     color: steelblue;
+    text-align: center;
 }
 
 img {
-    width: 800px;
+    width: 80%;
+    display: block;
+    margin: 0 auto;
     border: 4px solid steelblue;
 }
 
 p {
     padding: 10px;
+    width: 80%;
+    margin: 0 auto;
 }
 
-footer {
-    background-color: steelblue;
-    color: white;
-}
 .main-para {
+    width: 80%;
+    margin: 0 auto;
+    text-align: center;
     font-size: 1.5em;
     line-height: 1.5em;
 }
 #active {
     background-color: white;
     color: steelblue;
+}
+
+footer p {
+    font-size: 20px;
+    margin: 20px auto;
 }
