--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -17,6 +17,8 @@ main section img {
 }
 #logo_link {
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 
 #content {
@@ -34,10 +36,13 @@ nav a {
     text-decoration: none;
 }
 #hero-msg h1, #hero-msg h4 {
-    color: black;
+    color: white;
 }
 #background {
     height: 725px;
+    background-color: antiquewhite;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 body {
     background-color: #fcfbfb;
@@ -48,6 +53,8 @@ body {
 } 
 header {
     background-color: rgba(20,30,13, .7);
+    display: grid;
+    grid-template-columns: 150px auto;
 } 
 nav a:hover {
     background-color: black;
@@ -67,15 +74,14 @@ nav a:hover {
 .join:hover {
     background-color: rgb(218, 111, 4);
 }
-
-#background {
-    background-color: antiquewhite;
-} 
 .msg {
     background-color: rgba(20,30,13, .7);
     color: white;
     line-height: 1.5em;
     padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
 } 
 .msg p {
     font-size: .8em;
@@ -87,6 +93,9 @@ footer {
     text-decoration: none;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 } 
 footer a {
     text-decoration: none;
@@ -115,7 +124,97 @@ footer .social img {
 }
 .rivers-card, .camping-card, .rapids-card {
     margin: 200px 0;
+    
 }
-.card-img {
+.card-img, .mountains {
     border: 10px solid black;
+    width: 100%;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+nav {
+    display: flex;
+    justify-content: space-around;
+}
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+.home-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+.rivers-card {
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+.camping-card {
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.rapids-card {
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+.mountains {
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.08);
+}
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
