--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -247,14 +247,14 @@ hr.rounded {
 /* Contact Us Page */
 #feedback {
     background-color: antiquewhite;
-    position: absolute;
+    /*position: absolute;*/
     top: 0;
     left: 0;
     right: 0;
     padding: .5em;
-    /* make this element invisible until we are ready for it */
     display: none;      
 }
+
 .moveDown {
     margin-top: 3em;
 }
