--- a/lamottestudio/styles/style.css
+++ b/lamottestudio/styles/style.css
@@ -9,6 +9,10 @@
     color: aliceblue;
     margin-left: 40px;
     margin-top: 10px;
+    font-size: 1.8rem;
+}
+.nav a:hover{
+    color: #5D5D5D;
 }
 .nav {
     padding-top: 10px;
@@ -19,13 +23,17 @@
 #logo {
     padding: 10px;
     margin-left: 20px;
+    overflow: hidden;
 }
 
 #logo img {
     width: 120px;
+    -webkit-transition: all 0.8s ease;
+    -moz-transition: all 0.8s ease;
+    transition: all 0.8s ease;
 }
 .div-whatsapp {
-    margin-top: 10px;
+    margin-top: 20px;
     padding-top: 10px;
     margin-right: 20px;
     /* margin-left: auto; */
@@ -37,6 +45,13 @@
     border-radius: 30px;
     color: aliceblue;
     text-align: center;
+    -webkit-transition: all 0.8s ease;
+    -moz-transition: all 0.8s ease;
+    transition: all 0.8s ease;
+}
+.btn-whatsapp:hover {
+    color: white;
+   transform: scale(1.1);
 }
 
 #carousel {
@@ -123,13 +138,25 @@ body, html {
     padding: 100px;
     margin-top: 100px;
     margin-bottom: 100px;
-   
     justify-content: center;
   }
 
   .card {
-    margin-left: 100px;
-    margin-right: 100px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 400px;
+    box-shadow: 0px 0px 0px grey;
+  -webkit-transition:  box-shadow .2s ease-out;
+     box-shadow: .8px .9px 5px grey;
+  }
+  .card:hover {
+    box-shadow: 1px 8px 20px grey;
+    -webkit-transition:  box-shadow .2s;
+    transform: scale(1.01);
+  }
+  .card-img-top {
+    width: 400px;
+    height: 300px;
   }
 
   footer {
@@ -142,16 +169,60 @@ body, html {
     padding: 30px;
     text-align: center;
   }
-  footer a, p {
+  footer a, p, h5{
     color: #9B8F4A;
+  }
+  footer p, a {
+    font-size: 1.3em;
+  }
+  footer a:hover {
+    color: white;
+    text-decoration: none;
   }
 
   .services-section {
-
     background-color: #5F520A;
     height: 600px;
   }
   .row {
     margin-top: 50px;
   }
-  
+  .index-text {
+    width: 50%;
+    text-align: justify;
+    padding-top: 30px;
+    margin: auto;
+  }
+  #logo img:hover {
+    transform: scale(1.1);
+  }
+  .social-media {
+    display:block;
+    align-content: space-between;
+  }
+  .grid-container {
+    padding-top: 50px;
+    display:grid;
+  }
+  .grid-item1{
+    grid-column: 1;
+  }
+  .grid-item2{
+    grid-column: 2;
+  }
+  .grid-item3{
+    grid-column: 3;
+    margin-top: 0;
+    padding-top: 0;
+  }
+  .social-media i {
+    font-size: 2em;
+    padding-left: 40px;
+   
+  }
+  .social-media i:hover {
+    color: white;
+  }
+  .social-media h5{
+    margin-bottom: 20px;
+  }
