--- a/lamottestudio/styles/style.css
+++ b/lamottestudio/styles/style.css
@@ -148,11 +148,17 @@ body, html {
   }
   .card-section-portfolio {
     background-color: #5F520A;
-    padding: 100px;
-    margin-top: 100px;
-    margin-bottom: 100px;
+    padding: 50px;
+    /* margin-top: 100px; */
+    /* margin-bottom: 100px; */
     justify-content: center;
   }
+.portfolio-title {
+  text-align: center;
+  letter-spacing: 4px;
+  font-family: var(--paragraph-font);
+  font-weight: bold;
+}
 
   .card {
     margin-left: auto;
@@ -247,3 +253,48 @@ body, html {
   .card2, .card3 {
     margin-left: 50px;
   }
+
+/*  Services Page  */
+
+.grid-services {
+  padding-top: 60px;
+  display: grid;
+  justify-items: center;
+  margin-left: 180px;
+  margin-right: 180px;
+}
+.icon1 {
+  text-align: center;
+  grid-column: 1;
+  font-size: 6em;
+}
+.icon2 {
+  text-align: center;
+  grid-column: 2;
+  font-size: 6em;
+}
+.icon3 {
+  text-align: center;
+  grid-column: 3;
+  font-size: 6em;
+}
+.icon4 {
+  text-align: center;
+  grid-column: 4;
+  font-size: 6em;
+}
+.grid-services p {
+  font-size: 20px;
+  font-style: normal;
+}
+.btn-quote {
+  margin: auto;
+  padding-top: 100px;
+  width: 300px;
+  height: 120px;
+}
+.btn-dark {
+  font-size: 25px;
+  width: 300px;
+  height: 120px;
+}
